// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Warning > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="govuk-warning-text"
  >
    <span
      aria-hidden="true"
      class="govuk-warning-text__icon"
    >
      !
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-visually-hidden"
      >
        Warning
      </span>
      Test Warning Message
    </strong>
  </div>
</DocumentFragment>
`;

exports[`Warning > should render correctly with optional props 1`] = `
<DocumentFragment>
  <div
    class="govuk-warning-text"
  >
    <span
      aria-hidden="true"
      class="govuk-warning-text__icon"
    >
      ?
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-visually-hidden"
      >
        WARNING!!!
      </span>
      Test Warning Message
    </strong>
  </div>
</DocumentFragment>
`;
